# youtube-summarizer

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
.specify/memory/: constitution.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  db.py  main.py  models.py
backend/app/services/: fallacy_analyzer.py  qa.py  summarizer.py  transcript.py  youtube.py
backend/tests/integration/: conftest.py  test_api.py
backend/tests/unit/: test_db.py  test_fallacy_analyzer.py  test_models.py  test_summarizer.py  test_transcript.py  test_youtube.py
docs/plans/: 2026-02-24-delete-history-items-design.md  2026-02-24-delete-history-items.md
frontend/: .dockerignore  .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/src/: App.vue
frontend/src/components/: ErrorMessage.vue  FallacyDisplay.vue  FallacySummaryPanel.vue  HistoryCard.vue  HistoryPanel.vue  LengthSlider.vue  LoadingState.vue  SummaryDisplay.vue  UrlInput.vue
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/tests/components/: FallacyDisplay.spec.ts  (+4 more)
specs/001-video-summary/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-summary-length-slider/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-fallacy-analysis/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-postgres-video-storage/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+8 files in other folders)
